--- a/package.json
+++ b/package.json
@@ -20,15 +20,21 @@
     "url": "https://github.com/GoleeTeam/migrations-nest/issues"
   },
   "homepage": "https://github.com/GoleeTeam/migrations-nest#readme",
+  "peerDependencies": {
+    "@nestjs/common": "^8.0.0 || ^10.0.0",
+    "@nestjs/core": "^8.0.0 || ^10.0.0",
+    "@nestjs/mongoose": "^8.0.0 || ^10.0.0",
+    "mongoose": "^6.0.2 || ^7.0.0 || ^8.0.0"
+  },
   "dependencies": {
-    "@nestjs/common": "^8.2.6",
-    "@nestjs/core": "^8.2.6",
-    "@nestjs/mongoose": "^9.0.2",
-    "mongoose": "^6.1.8",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.2"
   },
   "devDependencies": {
+    "mongoose": "^8.0.0",
+    "@nestjs/mongoose": "^10.0.0",
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/core": "^10.0.0",
     "@nestjs/testing": "^8.2.6",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.13",
