--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^8.0.0 || ^10.0.0",
     "@nestjs/core": "^8.0.0 || ^10.0.0",
     "@nestjs/mongoose": "^8.0.0 || ^10.0.0",
+    "@nestjs/testing": "^8.0.0 || ^10.0.0",
     "mongoose": "^6.0.2 || ^7.0.0 || ^8.0.0"
   },
   "dependencies": {
@@ -35,7 +36,7 @@
     "@nestjs/mongoose": "^10.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/testing": "^8.2.6",
+    "@nestjs/testing": "^10.0.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.13",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
