--- a/package.json
+++ b/package.json
@@ -1,71 +1,79 @@
 {
-  "name": "@golee/migrations-nest",
-  "version": "0.8.1",
-  "description": "",
-  "main": "dist/index",
-  "types": "dist/index",
-  "scripts": {
-    "test": "jest",
-    "build": "rimraf dist && tsc",
-    "prepublish": "npm run build",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/GoleeTeam/migrations-nest.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/GoleeTeam/migrations-nest/issues"
-  },
-  "homepage": "https://github.com/GoleeTeam/migrations-nest#readme",
-  "peerDependencies": {
-    "@nestjs/common": "^8.0.0 || ^10.0.0",
-    "@nestjs/core": "^8.0.0 || ^10.0.0",
-    "@nestjs/mongoose": "^8.0.0 || ^10.0.0",
-    "@nestjs/testing": "^8.0.0 || ^10.0.0",
-    "mongoose": "^6.0.2 || ^7.0.0 || ^8.0.0"
-  },
-  "dependencies": {
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.5.2"
-  },
-  "devDependencies": {
-    "mongoose": "^8.0.0",
-    "@nestjs/mongoose": "^10.0.0",
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.13",
-    "@typescript-eslint/eslint-plugin": "^5.10.1",
-    "@typescript-eslint/parser": "^5.10.1",
-    "eslint": "^8.8.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "husky": "^7.0.4",
-    "jest": "^27.4.7",
-    "prettier": "^2.5.1",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^27.1.3",
-    "typescript": "^4.5.5"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.*spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
+    "name": "@golee/migrations-nest",
+    "version": "1.0.0",
+    "description": "",
+    "main": "dist/index",
+    "types": "dist/index",
+    "scripts": {
+        "test": "jest",
+        "build": "rimraf dist && tsc --project tsconfig.build.json",
+        "check": "cspell lint --quiet src",
+        "prepare": "husky install",
+        "prepublish": "npm run build"
     },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
-  }
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/GoleeTeam/migrations-nest.git"
+    },
+    "author": "",
+    "license": "Apache-2.0",
+    "bugs": {
+        "url": "https://github.com/GoleeTeam/migrations-nest/issues"
+    },
+    "homepage": "https://github.com/GoleeTeam/migrations-nest#readme",
+    "peerDependencies": {
+        "@nestjs/common": "^8.0.0 || ^10.0.0",
+        "@nestjs/core": "^8.0.0 || ^10.0.0",
+        "@nestjs/mongoose": "^8.0.0 || ^10.0.0",
+        "@nestjs/testing": "^8.0.0 || ^10.0.0",
+        "mongoose": "^6.0.2 || ^7.0.0 || ^8.0.0"
+    },
+    "dependencies": {
+        "reflect-metadata": "^0.1.13",
+        "rxjs": "^7.5.2"
+    },
+    "devDependencies": {
+        "@nestjs/common": "^10.3.7",
+        "@nestjs/config": "^3.2.1",
+        "@nestjs/core": "^10.3.7",
+        "@nestjs/mongoose": "^10.0.4",
+        "@nestjs/testing": "^10.0.0",
+        "@types/jest": "^27.4.0",
+        "@types/node": "^17.0.13",
+        "@typescript-eslint/eslint-plugin": "^5.10.1",
+        "@typescript-eslint/parser": "^5.10.1",
+        "cspell": "^8.3.2",
+        "eslint": "^8.56.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.1.2",
+        "husky": "^7.0.4",
+        "jest": "^27.4.7",
+        "lint-staged": "^14.0.1",
+        "mongoose": "^8.0.0",
+        "prettier": "^3.1.1",
+        "rimraf": "^3.0.2",
+        "ts-jest": "^27.1.3",
+        "typescript": "^4.5.5"
+    },
+    "jest": {
+        "moduleFileExtensions": [
+            "js",
+            "json",
+            "ts"
+        ],
+        "rootDir": "src",
+        "testRegex": ".*\\.*spec\\.ts$",
+        "transform": {
+            "^.+\\.(t|j)s$": "ts-jest"
+        },
+        "collectCoverageFrom": [
+            "**/*.(t|j)s"
+        ],
+        "coverageDirectory": "../coverage",
+        "testEnvironment": "node"
+    },
+    "lint-staged": {
+        "*.ts": "eslint --fix",
+        "*.json": "prettier --write"
+    }
 }
