--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@golee/migrations-nest",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "",
     "main": "dist/index",
     "types": "dist/index",
@@ -24,7 +24,7 @@
     "peerDependencies": {
         "@nestjs/common": "^8.0.0 || ^10.0.0",
         "@nestjs/core": "^8.0.0 || ^10.0.0",
-        "@nestjs/mongoose": "^8.0.0 || ^10.0.0",
+        "@nestjs/mongoose": "^8.0.0 || ^9.0.0 || ^10.0.0",
         "@nestjs/testing": "^8.0.0 || ^10.0.0",
         "mongoose": "^6.0.2 || ^7.0.0 || ^8.0.0"
     },
