--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@golee/migrations-nest",
-    "version": "1.0.3",
+    "version": "2.0.0",
     "description": "",
     "main": "dist/index",
     "types": "dist/index",
@@ -24,11 +24,10 @@
     "peerDependencies": {
         "@nestjs/common": "^8.0.0 || ^10.0.0",
         "@nestjs/core": "^8.0.0 || ^10.0.0",
-        "@nestjs/mongoose": "^8.0.0 || ^9.0.0 || ^10.0.0",
-        "@nestjs/testing": "^8.0.0 || ^10.0.0",
-        "mongoose": "^6.0.2 || ^7.0.0 || ^8.0.0"
+        "@nestjs/testing": "^8.0.0 || ^10.0.0"
     },
     "dependencies": {
+        "mongodb": "^6.9.0",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.5.2"
     },
@@ -36,7 +35,6 @@
         "@nestjs/common": "^10.3.7",
         "@nestjs/config": "^3.2.1",
         "@nestjs/core": "^10.3.7",
-        "@nestjs/mongoose": "^10.0.4",
         "@nestjs/testing": "^10.0.0",
         "@types/jest": "^27.4.0",
         "@types/node": "^17.0.13",
@@ -49,7 +47,7 @@
         "husky": "^7.0.4",
         "jest": "^27.4.7",
         "lint-staged": "^14.0.1",
-        "mongoose": "^8.0.0",
+        "mongodb-memory-server": "^10.1.2",
         "prettier": "^3.1.1",
         "rimraf": "^3.0.2",
         "ts-jest": "^27.1.3",
