--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "peerDependencies": {
         "@nestjs/common": "^8.0.0 || ^10.0.0",
         "@nestjs/core": "^8.0.0 || ^10.0.0",
-        "@nestjs/testing": "^8.0.0 || ^10.0.0"
+        "@nestjs/testing": "^8.0.0 || ^10.0.0",
+        "mongodb": "^4.0.0 || ^5.0.0 || ^6.0.0"
     },
     "dependencies": {
-        "mongodb": "^6.9.0",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.5.2"
     },
@@ -47,6 +47,7 @@
         "husky": "^7.0.4",
         "jest": "^27.4.7",
         "lint-staged": "^14.0.1",
+        "mongodb": "^4.17.2",
         "mongodb-memory-server": "^10.1.2",
         "prettier": "^3.1.1",
         "rimraf": "^3.0.2",
