--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,11 +1,9 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Node.js CI
+name: Build and test
 
-on:
-  push:
-    branches: [ "main" ]
+on: push
 
 jobs:
   build:
@@ -40,3 +38,40 @@ jobs:
 
       - name: Test
         run: pnpm run test
+        
+  publish:
+    runs-on: ubuntu-latest
+    needs: build
+  
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - uses: actions/checkout@v4
+  
+      - uses: pnpm/action-setup@v3
+        with:
+          version: latest
+  
+      - name: Setup Node.js 20
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          registry-url: 'https://registry.npmjs.org'
+          scope: '@golee'
+          cache: 'pnpm'
+  
+      - name: Increase patch and commit
+        run: |
+          git config --global user.name 'GitHub Action'
+          git config --global user.email 'action@github'
+          pnpm version patch
+  
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+  
+      - name: Build and Publish
+        run: pnpm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN_2 }}
+      
+      - name: Push Commit
+        run: git push --follow-tags
