--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "mongodb": "^4.0.0 || ^5.0.0 || ^6.0.0"
     },
     "dependencies": {
-        "reflect-metadata": "^0.1.14",
+        "reflect-metadata": "^0.2.2",
         "rxjs": "^7.8.1"
     },
     "devDependencies": {
@@ -42,23 +42,23 @@
         "@nestjs/config": "^3.2.3",
         "@nestjs/core": "^10.4.5",
         "@nestjs/testing": "^10.4.5",
-        "@types/jest": "^27.5.2",
-        "@types/node": "^17.0.45",
-        "@typescript-eslint/eslint-plugin": "^5.62.0",
-        "@typescript-eslint/parser": "^5.62.0",
+        "@types/jest": "^29.5.13",
+        "@types/node": "18.16.1",
+        "@typescript-eslint/eslint-plugin": "^8.10.0",
+        "@typescript-eslint/parser": "^8.10.0",
         "cspell": "^8.15.4",
-        "eslint": "^8.57.1",
+        "eslint": "^9.12.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.2.1",
-        "husky": "^7.0.4",
-        "jest": "^27.5.1",
-        "lint-staged": "^14.0.1",
-        "mongodb": "^4.17.2",
+        "husky": "^9.1.6",
+        "jest": "^29.7.0",
+        "lint-staged": "^15.2.10",
+        "mongodb": "^6.9.0",
         "mongodb-memory-server": "^10.1.2",
         "prettier": "^3.3.3",
-        "rimraf": "^3.0.2",
-        "ts-jest": "^27.1.5",
-        "typescript": "^4.9.5"
+        "rimraf": "^6.0.1",
+        "ts-jest": "^29.2.5",
+        "typescript": "^5.6.3"
     },
     "jest": {
         "moduleFileExtensions": [
