--- a/package.json
+++ b/package.json
@@ -33,10 +33,7 @@
         "@nestjs/testing": "^9.0.0 || ^10.0.0",
         "mongodb": "^4.0.0 || ^5.0.0 || ^6.0.0"
     },
-    "dependencies": {
-        "reflect-metadata": "^0.2.2",
-        "rxjs": "^7.8.1"
-    },
+    "dependencies": {},
     "devDependencies": {
         "@nestjs/common": "^10.4.5",
         "@nestjs/config": "^3.2.3",
