--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,6 +61,9 @@ jobs:
       id-token: write
       contents: write
 
+    env:
+      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+
     if: github.ref == 'refs/heads/main' && !contains(github.event.head_commit.message, '[skip-publish]')
 
     steps:
